--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.gradle
+.gradle/
 /build/
 
 # Ignore Gradle GUI config
@@ -14,3 +14,5 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 .idea/
+build/
+
