fix: configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .gradle/
 build/
-.idea/
+.idea
 
 
 # Ignore Gradle GUI config
@@ -15,5 +15,3 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
-
-/.idea/
